Task 4 write up done

--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -134,7 +134,7 @@
 		  </p>
 
 		  <div id="centerImage">
-			<img src="images/Moller_Trumbore.jpeg" class="centerImage" width="400px" style="margin: 5px 5px 5px 5px;">
+			<img src="images/Moller_Trumbore.jpeg" class="centerImage" width="480px" style="margin: 5px 5px 5px 5px;">
 			<figcaption>The Moller Trumbore Algorithm</figcaption>	
 		  </div>
 
@@ -146,11 +146,11 @@
 		  <p>Below is an example of what the algorithm's process looks like and how the final resulting Bezier curve is produced: </p>
 			  <div class="row">
 				<div class="column">
-				  <img src="images/CBspheres.png" width="400px" style="margin: 5px 5px 5px 5px;">
+				  <img src="images/CBspheres.png" width="480px" style="margin: 5px 5px 5px 5px;">
 				  <figcaption>../dae/sky/CBspheres_lambertian.dae</figcaption>
 				</div>
 				<div class="column">
-				  <img src="images/CBgems.png" width="400px" style="margin: 5px 5px 5px 5px;">
+				  <img src="images/CBgems.png" width="480px" style="margin: 5px 5px 5px 5px;">
 				  <figcaption>../dae/sky/CBgems.dae </figcaption>
 				</div>
 			  </div>
@@ -361,7 +361,7 @@
 			</div>
 			<div class="row">
 				<div class="column">
-				<img src="images/bunny_global.png" width="480px" style="margin: 5px 5px 5px 5px;">
+				<img src="images/task4_max_ray_depth/bunny_ray_depth100.png" width="480px" style="margin: 5px 5px 5px 5px;">
 				<figcaption> Max Ray Depth of 100 </figcaption>
 				</div>
 			</div>
